# urlshortener

./: .env.example  .gitignore  README.md  setup.cfg  setup.py
urlshortener/: app.py
urlshortener/templates/: admin.html  base.html  gone.html  index.html  manage_edit.html  manage_select.html  notfound.html  track_and_redirect.html
