[metadata]
name = urlshortener

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/urlshortener
license = BSD-3-Clause
description = A python web tool for shortening URLs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/urlshortener/issues
    Documentation = https://github.com/CBI-PITT/urlshortener#README.md
    Source Code = https://github.com/CBI-PITT/urlshortener
    User Support = https://github.com/CBI-PITT/urlshortener/issues

[options]
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    flask
	python-dotenv